--- a/29-10-2020/views/home.handlebars
+++ b/29-10-2020/views/home.handlebars
@@ -15,7 +15,7 @@
 {{#if locations}}
 	<ul>
 		{{#each locations}}
-			<li> <a href="/weather/{{this.woeid}}/?cityName={{this.title}}"> {{this.title}} </a> </li>
+			<li> <a href="/weather/{{this.woeid}}/"> {{this.title}} </a> </li>
 		{{/each}}
 	</ul>
 {{/if}}
