--- a/29-10-2020/views/weather.handlebars
+++ b/29-10-2020/views/weather.handlebars
@@ -5,14 +5,14 @@
 <p style="color:red"> Error : {{err}}</p>
 {{/if}}
 
+
 {{#if weathers}}
-<div style="display:flex,margin:-4px">
+<div style="display:flex;margin:-4px">
 		{{#each weathers}}
-			<div style="flex:1;text-align:center;padding:8px;margin:4px;">
+			<div style="flex: 1; text-align: center; padding: 8px; margin: 4px; border-radius: 8px;box-shadow: 0 8px 60px 0 rgba(103, 151, 255, .11), 0 12px 90px 0 rgba(103, 151, 255, .11);">
 				<strong>{{this.applicable_date}}</strong>  
-				<img width="75%" src="https://www.metaweather.com/static/img/weather/png/{{this.weather_state_abbr}}.png">
+				<img width="75%" src="https://www.metaweather.com/static/img/weather/{{this.weather_state_abbr}}.svg" />
 				<div>{{this.weather_state_name}}</div>
-				<div>{{this.minTemp}}-{{this.maxTemp}}</div>
 			</div>
 		{{/each}}
 </div>
